# inih

./: CMakeLists.txt
cmake/: INIHConfig.cmake.in  INIReader.pc.in  config.cmake  inih.pc.in  install.cmake  options.cmake
cmake/Modules/: FindINIH.cmake
examples/: CMakeLists.txt  INIReaderExample.cpp  Readme.cmake
